<resources>

    <string name="app_name">Hospital_Management</string>

    <string name="hospital_name">LIFECARE HOSPITALS</string>

    <string name="menuTitle">Staff Menu</string>
    <string name="addStaff">Add Staff</string>
    <string name="staffView">View Staff</string>
    <string name="staffDelete">Delete Staff</string>
    <string name="staffUpdate">Update Staff</string>
    <string name="mainMenu">Main Menu</string>
    <string name="title_activity_staff_add">Staff_add</string>
    <string name="title_activity_staff__addn">staff_Addn</string>


    <string name="update_topic">Update Drugs</string>
    <string name="update_name">Name</string>
    <string name="update_manufacturer">Producer</string>
    <string name="update_quantity">Quantity</string>
    <string name="update_price">Price</string>
    <string name="update_description">Details</string>
    <string name="update_name_get"></string>
    <string name="update_manufacturer_get"></string>
    <string name="update_quantity_get"></string>
    <string name="update_price_get"></string>
    <string name="update_description_get"></string>
    <string name="update_btn_update">Update</string>
    <string name="update_btn_remove">Remove</string>


    <string name="main_btn1">View Drugs List</string>
    <string name="main_btn2">Insert New Drug</string>
    <string name="main_btn3">To Home</string>

    <string name="insert_topic">Insert Drugs</string>
    <string name="insert_name">Name</string>
    <string name="insert_manufacturer">Producer</string>
    <string name="insert_quantity">Quantity</string>
    <string name="insert_price">Price</string>
    <string name="insert_description">Details</string>
    <string name="insert_name_get"></string>
    <string name="insert_manufacturer_get"></string>
    <string name="insert_quantity_get"></string>
    <string name="insert_price_get"></string>
    <string name="insert_description_get"></string>
    <string name="insert_btn_insert">Insert</string>

    <string name="doc_add">NEW DOCTOR</string>
    <string name="doctor_Name">Name</string>
    <string name="doctor_age">Age</string>
    <string name="doctor_designation">Designation</string>
    <string name="doctor_address">Address</string>
    <string name="doctor_number">Contact Number</string>
    <string name="doctor_ward">Ward Number</string>
    <string name="submit">Submit</string>

    <string name="doc_list">DOCTOR LIST</string>

    <string name="edit_details">EDIT DETAILS</string>
    <string name="view">Dr.XYZ</string>

    <string name="back_home">Back to Home</string>
    <string name="search">Search</string>
    <string name="save">Save Changes</string>
    <string name="delete">Delete</string>
    <string name="editDelete">EDIT / delete</string>
    <string name="edit">edit</string>

    <string name="doc_main">DOCTOR MENU</string>
    <string name="logout">Log Out</string>
    <string name="login">Login</string>

    <string name="title_activity_hospital_management">Hospital_management</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="insert_staff">Insert</string>
    <string name="insert_st_name">Name</string>
    <string name="insert_st_age">Age</string>
    <string name="insert_st_gender">Gender</string>
    <string name="insert_st_address">Address</string>
    <string name="insert_st_contact">Contact</string>
    <string name="insert_st_role">Role</string>
    <string name="st_tb_view_1">ID</string>
    <string name="st_tb_view_2">Name</string>
    <string name="st_tb_view_3">Role</string>

    <string name="update_staff">Update</string>
    <string name="delete_staff">Delete</string>
    <string name="update_st_name">Name</string>
    <string name="update_st_age">Age</string>
    <string name="update_st_gender">Gender</string>
    <string name="update_st_address">Address</string>
    <string name="update_st_contact">Contact</string>
    <string name="update_st_role">Role</string>

    <string name="title_activity_staff_viewn">Activity_staff_viewn</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="staffInsert"> Insert Staff</string>
    <string name="staffSearch"> Search Staff</string>


    <string name="view_table_head1">ID</string>
    <string name="view_table_head2">Name</string>
    <string name="view_table_head3">Qty</string>


</resources>
