<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".doctor_add">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="313dp"
        android:layout_height="375dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756">

        <TextView
            android:id="@+id/textViewx"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_Name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_age"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_age"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_age"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_desig"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_designation"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_desig"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_adrs"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_address"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_adrs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_tpno"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_tp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/doc_ward"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/doctor_ward"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/doctor_ward"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/background_light"
        android:text="@string/doc_add"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/btnsearch"
        android:layout_width="116dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/btnLogin"
        android:padding="10dp"
        android:text="@string/submit"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.387" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="120dp"
        android:layout_height="123dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/doctor" />
</androidx.constraintlayout.widget.ConstraintLayout>